--- a/stonebrick/forge/src/main/resources/assets/stonebrick/lang/en_US.lang
+++ b/stonebrick/forge/src/main/resources/assets/stonebrick/lang/en_US.lang
@@ -1,1 +1,2 @@
-commands.smelt.usage=/smelt [furnace code]
+commands.runjs.usage=/runjs [furnace code]
+commands.runscript.usage=/runscript [script file]
